# blog

./: .gitignore  config.py  environment.yml  manage.py  pyproject.toml  requirements.txt  setup.py
app/: __init__.py  forms.py  model.py  views.py
app/static/: main.css
app/static/css/: main.css
app/static/posts/: Building_a_blog.md  test.md
app/templates/: 404.html  500.html  header.html  index.html  login.html  post.html  posts.html  sidebar.html  upload.html  user.html  writepost.html
blog/: __init__.py  app.py  config.py  extensions.py  forms.py  manage.py  model.py  views.py
blog/static/css/: main.css
blog/templates/: 404.html  500.html  about.html  editpost.html  editprofile.html  header.html  login.html  post.html  posts.html  upload.html  user.html
migrations/versions/: d28727796a3d_.py
tests/: test_base.py  test_login.py
